--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Peakboard Epic Boards",
-  "short_name": "Peakboard Epic Boards",
+  "name": "Peakboard Templates",
+  "short_name": "Peakboard Templates",
   "icons": [{
     "src": "assets/images/icons/icon-128x128.png",
       "sizes": "128x128",
