/view/ now working?

--- a/_config.yml
+++ b/_config.yml
@@ -23,12 +23,13 @@ plugins:
 collections_dir: content
 collections:
   templates:
-    output: true
-  view:
-    output: true
+    output: true  
   scripting_examples:
     output: true
     position: 1
+  view:
+    output: true
+    position: 3
 
 # Portions of text found throughout common components (like the footer) can be configured here for each language
 language:
