fix github footer link

--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ language:
     footer-copyright: "All rights are reserved."
     footer-github: "Github"
     footer-github-text: "View this page in Github"
-    footer-github-url: ""
+    footer-github-url: "https://github.com/Peakboard/peakboard-templates.github.io/tree/master/_templates/"
     search-title: "Peakboard Search"
     search-results: "Results"
     search-no-results: "We didn't find any results for the search: "
@@ -100,7 +100,7 @@ language:
     footer-copyright: "版权所有，保留所有权利"
     footer-github: "Github"
     footer-github-text: "View this page in Github"
-    footer-github-url: ""
+    footer-github-url: "https://github.com/Peakboard/peakboard-templates.github.io/tree/master/_templates/"
     search-title: "Peakboard搜索"
     search-results: "搜索结果"
     search-no-results: "未找到相关搜索结果： "
