--- a/_config.yml
+++ b/_config.yml
@@ -58,9 +58,9 @@ language:
     cta-link: "https://peakboard.com/en/peakboard-designer/?utm_source=help_center&utm_medium=get_started_button"
     cta-link-text: "Download Peakboard designer for free"
   de:
-    article-download-button-text: "Download jetzt"
+    article-download-button-text: "Herunterladen"
     homepage-top-section-title: "Peakboard Templates"
-    homepage-top-section-content: "Peakboard is highly customizable, here are some examples how you can use it. Get inspired and get started."
+    homepage-top-section-content: "Peakboard bietet mit seiner flexibilität zahlreiche Möglichkeiten. Hier finden Sie einige Beispiele die Sie als Template verwenden können. Einfach herunterladen und starten."
     top-menu-cta-button-text: "Kostenlos starten"
     top-menu-cta-button-url: ""
     page-top-overview-text: "Template Overview"
@@ -88,7 +88,7 @@ language:
     cta-link: "https://peakboard.com/peakboard-designer/?utm_source=help_center&utm_medium=get_started_button"
     cta-link-text: "Peakboard-Designer kostenlos herunterladen"
   cn:
-    article-download-button-text: "Download now"
+    article-download-button-text: "Download"
     homepage-top-section-title: "获取帮助"
     homepage-top-section-content: "针对您的需求，帮助您快速、高效地充分利用Peakboard，详情请参考相关文章。"
     top-menu-cta-button-text: "Start for free"
