Another text update

--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ language:
   de:
     article-download-button-text: "Herunterladen"
     homepage-top-section-title: "Peakboard Templates"
-    homepage-top-section-content: "Peakboard bietet mit seiner flexibilität zahlreiche Möglichkeiten. Hier finden Sie einige Beispiele die Sie als Template verwenden können. Einfach herunterladen und starten."
+    homepage-top-section-content: "Durch die Flexbibilität von Peakboard gibt es zahlreiche Anwendungsmöglichkeiten. Hier finden Sie einige Beispiele die Sie als Template verwenden können. Einfach herunterladen und starten."
     top-menu-cta-button-text: "Kostenlos starten"
     top-menu-cta-button-url: ""
     page-top-overview-text: "Template Overview"
