Get rid of that Epic stuff.

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: "Peakboard Epic Boards"
+title: "Peakboard Templates"
 email:  support@peakboard.com
-description: "Epic Boards for Peakboard."
+description: "Templates for your Peakboard."
 url: "https://templates.peakboard.com/"
 twitter_username: pkbrd
 github_username:  Peakboard
