--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: "Peakboard Templates"
+title: "Peakboard Templates – Get inspired"
 email:  support@peakboard.com
-description: "Templates for your Peakboard."
+description: "Templates for your Peakboard. Get more out of your Peakboard experience by using one of our awesome templates."
 url: "https://templates.peakboard.com/"
 twitter_username: pkbrd
 github_username:  Peakboard
