--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ language:
     homepage-top-section-title: "Peakboard Templates"
     homepage-top-section-content: "Peakboard is highly customizable, here are some examples how you can use it. Get inspired and get started."
     top-menu-cta-button-text: "Start for free"
-    top-menu-cta-button-url: ""
+    top-menu-cta-button-url: "https://peakboard.com/en/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
     page-top-overview-text: "Template Overview"
     footer-support: "Support"
     footer-support-tel: "Tel:"
@@ -62,7 +62,7 @@ language:
     homepage-top-section-title: "Peakboard Templates"
     homepage-top-section-content: "Durch die Flexbibilität von Peakboard gibt es zahlreiche Anwendungsmöglichkeiten. Hier finden Sie einige Beispiele die Sie als Template verwenden können. Einfach herunterladen und starten."
     top-menu-cta-button-text: "Kostenlos starten"
-    top-menu-cta-button-url: ""
+    top-menu-cta-button-url: "https://peakboard.com/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
     page-top-overview-text: "Template Overview"
     footer-support: "Support"
     footer-support-tel: "Tel:"
@@ -92,7 +92,7 @@ language:
     homepage-top-section-title: "获取帮助"
     homepage-top-section-content: "针对您的需求，帮助您快速、高效地充分利用Peakboard，详情请参考相关文章。"
     top-menu-cta-button-text: "Start for free"
-    top-menu-cta-button-url: ""
+    top-menu-cta-button-url: "https://peakboard.com/en/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
     page-top-overview-text: "Template Overview"
     footer-support: "技术支持"
     footer-support-tel: "电话："
