--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ languageNames:
   de: Deutsch
   en: English
 # Analytics
-# gtm: ""
+gtm: "GTM-T2LNC7N"
 # Build settings
 markdown: kramdown
 theme: minima
@@ -31,6 +31,10 @@ language:
     article-download-button-text: "Download now"
     homepage-top-section-title: "Peakboard Templates"
     homepage-top-section-content: "Peakboard is highly customizable, here are some examples how you can use it. Get inspired and get started."
+    homepage-featured-category: "Featured"
+    homepage-all-category: "All"
+    homepage-visible-categories: ["Featured","Administration","Andon","Food","Interactive","Logistic","Production","Scripting","Warning","Welcome"]
+    homepage-visible-data-sources: ["Excel","SAP","SQL"]
     top-menu-cta-button-text: "Start for free"
     top-menu-cta-button-url: "https://peakboard.com/en/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
     page-top-overview-text: "Template Overview"
@@ -61,6 +65,10 @@ language:
     article-download-button-text: "Herunterladen"
     homepage-top-section-title: "Peakboard Templates"
     homepage-top-section-content: "Durch die Flexbibilität von Peakboard gibt es zahlreiche Anwendungsmöglichkeiten. Hier finden Sie einige Beispiele die Sie als Template verwenden können. Einfach herunterladen und starten."
+    homepage-featured-category: "Beliebt"
+    homepage-all-category: "Alle"
+    homepage-visible-categories: ["Beliebt","Andon","Administration","Produktion","Logistik","Scripting","Willkommensbildschirm","Lebensmittel","Warnung","Interaktiv"]
+    homepage-visible-data-sources: ["Excel","SAP","SQL"]
     top-menu-cta-button-text: "Kostenlos starten"
     top-menu-cta-button-url: "https://peakboard.com/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
     page-top-overview-text: "Template Overview"
@@ -91,6 +99,10 @@ language:
     article-download-button-text: "Download"
     homepage-top-section-title: "获取帮助"
     homepage-top-section-content: "针对您的需求，帮助您快速、高效地充分利用Peakboard，详情请参考相关文章。"
+    homepage-featured-category: ""
+    homepage-all-category: "All"
+    homepage-visible-categories: []
+    homepage-visible-data-sources: []
     top-menu-cta-button-text: "Start for free"
     top-menu-cta-button-url: "https://peakboard.com/en/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
     page-top-overview-text: "Template Overview"
