--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,10 @@ language:
     homepage-top-section-content: "Peakboard is highly customizable, here are some examples how you can use it. Get inspired and get started."
     homepage-featured-category: "Featured"
     homepage-all-category: "All"
+    homepage-menu-title-category: "Categories"
+    homepage-menu-title-data-sources: "Data Sources"
     homepage-visible-categories: ["Featured","Administration","Andon","Food","Interactive","Logistic","Production","Scripting","Warning","Welcome"]
-    homepage-visible-data-sources: 
+    homepage-visible-data-sources:
     top-menu-cta-button-text: "Start for free"
     top-menu-cta-button-url: "https://peakboard.com/en/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
     page-top-overview-text: "Template Overview"
@@ -67,6 +69,8 @@ language:
     homepage-top-section-content: "Durch die Flexbibilität von Peakboard gibt es zahlreiche Anwendungsmöglichkeiten. Hier finden Sie einige Beispiele die Sie als Template verwenden können. Einfach herunterladen und starten."
     homepage-featured-category: "Beliebt"
     homepage-all-category: "Alle"
+    homepage-menu-title-category: "Kategorien"
+    homepage-menu-title-data-sources: "Data Sources"
     homepage-visible-categories: ["Beliebt","Andon","Administration","Produktion","Logistik","Scripting","Willkommensbildschirm","Lebensmittel","Warnung","Interaktiv"]
     homepage-visible-data-sources:
     top-menu-cta-button-text: "Kostenlos starten"
@@ -101,6 +105,8 @@ language:
     homepage-top-section-content: "针对您的需求，帮助您快速、高效地充分利用Peakboard，详情请参考相关文章。"
     homepage-featured-category: ""
     homepage-all-category: "All"
+    homepage-menu-title-category: "Categories"
+    homepage-menu-title-data-sources: "Data Sources"
     homepage-visible-categories: []
     homepage-visible-data-sources: []
     top-menu-cta-button-text: "Start for free"
