Fix double slash in url when clicking on a category from a page

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: "Peakboard Templates – Get inspired"
 email:  support@peakboard.com
 description: "Templates for your Peakboard. Get more out of your Peakboard experience by using one of our awesome templates."
-url: "https://templates.peakboard.com/"
+url: "https://templates.peakboard.com"
 twitter_username: pkbrd
 github_username:  Peakboard
 languages: ["en", "de"]
