--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ language:
     homepage-featured-category: "Beliebt"
     homepage-all-category: "Alle"
     homepage-menu-title-category: "Kategorien"
-    homepage-menu-title-data-sources: "Data Sources"
+    homepage-menu-title-data-sources: "Datenquellen"
     homepage-visible-categories: ["Administration","Andon","Empfang","KPIs","Lean Management","Logistik","OEE / GAE","Produktion","Scripting","Interaktion"]
     homepage-visible-data-sources:
     top-menu-cta-button-text: "Kostenlos starten"
@@ -79,12 +79,12 @@ language:
     footer-support: "Support"
     footer-support-tel: "Tel:"
     footer-support-email: "E-Mail:"
-    footer-contact: "Contact"
+    footer-contact: "Kontakt"
     footer-contact-email: "E-Mail:"
     footer-contact-website: "Website:"
-    footer-copyright: "All rights are reserved."
+    footer-copyright: "Alle Rechte vorbehalten."
     footer-github: "Github"
-    footer-github-text: "View this page in Github"
+    footer-github-text: "Diese Seite in Github öffnen"
     footer-github-url: "https://github.com/Peakboard/peakboard-templates.github.io/tree/master/_templates/"
     search-title: "Peakboard Suche"
     search-results: "Ergebnisse"
