--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ language:
     homepage-all-category: "Alle"
     homepage-menu-title-category: "Kategorien"
     homepage-menu-title-data-sources: "Datenquellen"
-    homepage-visible-categories: ["Administration","Andon","Empfang","KPIs","Lean Management","Logistik","GAE (OEE)","Produktion","Scripting","Interaktion"]
+    homepage-visible-categories: ["Administration","Andon","Empfang","KPIs","Lean Management","Logistik","GAE","Produktion","Scripting","Interaktion"]
     homepage-visible-data-sources:
     top-menu-cta-button-text: "Kostenlos starten"
     top-menu-cta-button-url: "https://peakboard.com/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
