Updated content. More english screens

--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ language:
     homepage-menu-title-data-sources: "Data Sources"
     homepage-visible-categories: ["Administration","Andon","KPIs","Lean Management","Logistics","OEE","Production","Scripting","Welcome Board","Interaction"]
     homepage-visible-data-sources:
-    top-menu-cta-button-text: "Start for free"
+    top-menu-cta-button-text: "Get started!"
     top-menu-cta-button-url: "https://peakboard.com/en/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
     page-top-overview-text: "Template Overview"
     footer-support: "Support"
@@ -73,7 +73,7 @@ language:
     homepage-menu-title-data-sources: "Datenquellen"
     homepage-visible-categories: ["Administration","Andon","Empfang","KPIs","Lean Management","Logistik","OEE / GAE","Produktion","Scripting","Interaktion"]
     homepage-visible-data-sources:
-    top-menu-cta-button-text: "Kostenlos starten"
+    top-menu-cta-button-text: "Jetzt starten!"
     top-menu-cta-button-url: "https://peakboard.com/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
     page-top-overview-text: "Template Overview"
     footer-support: "Support"
@@ -109,7 +109,7 @@ language:
     homepage-menu-title-data-sources: "Data Sources"
     homepage-visible-categories: []
     homepage-visible-data-sources: []
-    top-menu-cta-button-text: "Start for free"
+    top-menu-cta-button-text: "Get started!"
     top-menu-cta-button-url: "https://peakboard.com/en/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
     page-top-overview-text: "Template Overview"
     footer-support: "技术支持"
