fix lazyload issues

--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ language:
     article-download-button-text: "Download now"
     homepage-top-section-title: "Peakboard Templates"
     homepage-top-section-content: "Peakboard is highly customizable, here are some examples how you can use it. Get inspired and get started."
+    homepage-carousel-button-text: "Learn More"
     homepage-featured-category: "Featured"
     homepage-all-category: "All"
     homepage-menu-title-category: "Categories"
@@ -67,6 +68,7 @@ language:
     article-download-button-text: "Herunterladen"
     homepage-top-section-title: "Peakboard Templates"
     homepage-top-section-content: "Durch die Flexbibilität von Peakboard gibt es zahlreiche Anwendungsmöglichkeiten. Hier finden Sie einige Beispiele die Sie als Template verwenden können. Einfach herunterladen und starten."
+    homepage-carousel-button-text: "Learn More"
     homepage-featured-category: "Beliebt"
     homepage-all-category: "Alle"
     homepage-menu-title-category: "Kategorien"
@@ -103,6 +105,7 @@ language:
     article-download-button-text: "Download"
     homepage-top-section-title: "获取帮助"
     homepage-top-section-content: "针对您的需求，帮助您快速、高效地充分利用Peakboard，详情请参考相关文章。"
+    homepage-carousel-button-text: "Learn More"
     homepage-featured-category: ""
     homepage-all-category: "All"
     homepage-menu-title-category: "Categories"
