Fix edgecase carousel bug, all code tags break words now, add Legal link in footer

--- a/_config.yml
+++ b/_config.yml
@@ -51,6 +51,8 @@ language:
     footer-github: "Github"
     footer-github-text: "View this page in Github"
     footer-github-url: "https://github.com/Peakboard/peakboard-templates.github.io/tree/master/_templates/"
+    footer-legal: "Legal Information"
+    footer-legal-url: "https://peakboard.com/en/legal-notice/"
     search-title: "Peakboard Search"
     search-results: "Results"
     search-no-results: "We didn't find any results for the search: "
@@ -88,6 +90,8 @@ language:
     footer-github: "Github"
     footer-github-text: "Seite in Github öffnen"
     footer-github-url: "https://github.com/Peakboard/peakboard-templates.github.io/tree/master/_templates/"
+    footer-legal: "Legal Information"
+    footer-legal-url: "https://peakboard.com/legal-notice/"
     search-title: "Peakboard Suche"
     search-results: "Ergebnisse"
     search-no-results: "Wir haben leider nichts gefunden: "
@@ -125,6 +129,8 @@ language:
     footer-github: "Github"
     footer-github-text: "View this page in Github"
     footer-github-url: "https://github.com/Peakboard/peakboard-templates.github.io/tree/master/_templates/"
+    footer-legal: "Legal Information"
+    footer-legal-url: "https://peakboard.com/cn/legal-notice/"
     search-title: "Peakboard搜索"
     search-results: "搜索结果"
     search-no-results: "未找到相关搜索结果： "
