Updated Text for Search

--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ language:
     search-title: "Peakboard Search"
     search-results: "Results"
     search-no-results: "We didn't find any results for the search: "
-    search-bar-placeholder: "Filter"
+    search-bar-placeholder: "Search"
     cookie-alert-message: "This website uses cookies to ensure you get the best experience on our website."
     cookie-alert-button: "OK"
     cookie-alert-link-text: "Read more"
@@ -91,7 +91,7 @@ language:
     search-title: "Peakboard Suche"
     search-results: "Ergebnisse"
     search-no-results: "Wir haben leider nichts gefunden: "
-    search-bar-placeholder: "Filter"
+    search-bar-placeholder: "Suchen"
     cookie-alert-message: "Um sicherzustellen, dass Sie das beste Nutzungserlebnis auf unserer Webseite erfahren, werden Cookies verwendet."
     cookie-alert-button: "OK"
     cookie-alert-link-text: "Mehr erfahren"
