--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ language:
     article-download-button-text: "Download now"
     homepage-top-section-title: "Peakboard Templates"
     homepage-top-section-content: "Peakboard is highly customizable, here are some examples how you can use it. Get inspired and get started."
-    homepage-carousel-button-text: "Learn More"
+    homepage-carousel-button-text: "Learn more"
     homepage-featured-category: "Featured"
     homepage-all-category: "All"
     homepage-menu-title-category: "Categories"
@@ -70,7 +70,7 @@ language:
     article-download-button-text: "Herunterladen"
     homepage-top-section-title: "Peakboard Templates"
     homepage-top-section-content: "Durch die Flexbibilität von Peakboard gibt es zahlreiche Anwendungsmöglichkeiten. Hier finden Sie einige Beispiele die Sie als Template verwenden können. Einfach herunterladen und starten."
-    homepage-carousel-button-text: "Learn More"
+    homepage-carousel-button-text: "Mehr erfahren"
     homepage-featured-category: "Beliebt"
     homepage-all-category: "Alle"
     homepage-menu-title-category: "Kategorien"
@@ -90,7 +90,7 @@ language:
     footer-github: "Github"
     footer-github-text: "Seite in Github öffnen"
     footer-github-url: "https://github.com/Peakboard/peakboard-templates.github.io/tree/master/_templates/"
-    footer-legal: "Legal Information"
+    footer-legal: "Impressum"
     footer-legal-url: "https://peakboard.com/legal-notice/"
     search-title: "Peakboard Suche"
     search-results: "Ergebnisse"
@@ -109,7 +109,7 @@ language:
     article-download-button-text: "Download"
     homepage-top-section-title: "获取帮助"
     homepage-top-section-content: "针对您的需求，帮助您快速、高效地充分利用Peakboard，详情请参考相关文章。"
-    homepage-carousel-button-text: "Learn More"
+    homepage-carousel-button-text: "Learn more"
     homepage-featured-category: ""
     homepage-all-category: "All"
     homepage-menu-title-category: "Categories"
@@ -130,7 +130,7 @@ language:
     footer-github-text: "View this page in Github"
     footer-github-url: "https://github.com/Peakboard/peakboard-templates.github.io/tree/master/_templates/"
     footer-legal: "Legal Information"
-    footer-legal-url: "https://peakboard.com/cn/legal-notice/"
+    footer-legal-url: "https://peakboard.com/en/legal-notice/"
     search-title: "Peakboard搜索"
     search-results: "搜索结果"
     search-no-results: "未找到相关搜索结果： "
