--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ language:
     homepage-visible-data-sources:
     top-menu-cta-button-text: "Jetzt starten!"
     top-menu-cta-button-url: "https://peakboard.com/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
-    page-top-overview-text: "Template Overview"
+    page-top-overview-text: "Template Übersichtsseite"
     footer-support: "Support"
     footer-support-tel: "Tel:"
     footer-support-email: "E-Mail:"
