Featured -> Recommended, Beliebt -> Empfohlen

--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ language:
     homepage-top-section-title: "Peakboard Templates"
     homepage-top-section-content: "Peakboard is highly customizable, here are some examples how you can use it. Get inspired and get started."
     homepage-carousel-button-text: "Learn more"
-    homepage-featured-category: "Featured"
+    homepage-featured-category: "Recommended"
     homepage-all-category: "All"
     homepage-menu-title-category: "Categories"
     homepage-menu-title-data-sources: "Data Sources"
@@ -71,7 +71,7 @@ language:
     homepage-top-section-title: "Peakboard Templates"
     homepage-top-section-content: "Durch die Flexbibilität von Peakboard gibt es zahlreiche Anwendungsmöglichkeiten. Hier finden Sie einige Beispiele die Sie als Template verwenden können. Einfach herunterladen und starten."
     homepage-carousel-button-text: "Mehr erfahren"
-    homepage-featured-category: "Beliebt"
+    homepage-featured-category: "Empfohlen"
     homepage-all-category: "Alle"
     homepage-menu-title-category: "Kategorien"
     homepage-menu-title-data-sources: "Datenquellen"
