--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ language:
     homepage-all-category: "All"
     homepage-menu-title-category: "Categories"
     homepage-menu-title-data-sources: "Data Sources"
-    homepage-visible-categories: ["Administration","Andon","KPIs","Lean Management","Logistics","OEE","Production","Scripting","Welcome Board","Interaction"]
+    homepage-visible-categories: ["Administration","Andon","KPI","Lean Management","Logistics","OEE","Production","Scripting","Welcome Board","Interaction"]
     homepage-visible-data-sources:
     top-menu-cta-button-text: "Get started!"
     top-menu-cta-button-url: "https://peakboard.com/en/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
@@ -75,7 +75,7 @@ language:
     homepage-all-category: "Alle"
     homepage-menu-title-category: "Kategorien"
     homepage-menu-title-data-sources: "Datenquellen"
-    homepage-visible-categories: ["Administration","Andon","Empfang","KPIs","Lean Management","Logistik","OEE / GAE","Produktion","Scripting","Interaktion"]
+    homepage-visible-categories: ["Administration","Andon","Empfang","KPI","Lean Management","Logistik","OEE / GAE","Produktion","Scripting","Interaktion"]
     homepage-visible-data-sources:
     top-menu-cta-button-text: "Jetzt starten!"
     top-menu-cta-button-url: "https://peakboard.com/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
