--- a/_config.yml
+++ b/_config.yml
@@ -28,9 +28,9 @@ collections:
 # Portions of text found throughout common components (like the footer) can be configured here for each language
 language:
   en:
-    article-download-button-text: "Download now"
+    article-download-button-text: "Download template"
     homepage-top-section-title: "Peakboard Templates"
-    homepage-top-section-content: "Peakboard is highly customizable, here are some examples how you can use it. Get inspired and get started."
+    homepage-top-section-content: "Due to the flexibility of Peakboard there are numerous application possibilities in the most diverse areas. Here you will find some templates with a short description, which you can download directly and use for your purposes."
     homepage-carousel-button-text: "Learn more"
     homepage-featured-category: "Recommended"
     homepage-all-category: "All"
@@ -61,15 +61,15 @@ language:
     cookie-alert-button: "OK"
     cookie-alert-link-text: "Read more"
     cookie-alert-link: "https://peakboard.com/en/privacy-policy/"
-    cta-title: "Try the Peakboard designer"
-    cta-subtitle: "Create your custom dashboard now"
-    cta-content: "With the Peakboard-Designer, you can quickly create a wide range of dashboards to display your relevant information at a glance and in real time. Whether with live tiles, voice commands or classic tables. For production, logistics, IT or distribution."
+    cta-title: "TRY THE PEAKBOARD DESIGNER"
+    cta-subtitle: "Create your individual visualization"
+    cta-content: "With the Peakboard Designer you can create different visualizations for production, logistics, IT and many other areas within a very short time. With Peakboard you can display all relevant information, KPIs and processes at a glance and in real time."
     cta-link: "https://peakboard.com/en/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
     cta-link-text: "Download Peakboard designer for free"
   de:
-    article-download-button-text: "Herunterladen"
+    article-download-button-text: "Template herunterladen"
     homepage-top-section-title: "Peakboard Templates"
-    homepage-top-section-content: "Durch die Flexbibilität von Peakboard gibt es zahlreiche Anwendungsmöglichkeiten. Hier finden Sie einige Beispiele die Sie als Template verwenden können. Einfach herunterladen und starten."
+    homepage-top-section-content: "Durch die Flexibilität von Peakboard gibt es zahlreiche Anwendungsmöglichkeiten in den unterschiedlichsten Bereichen. Hier finden Sie einige Vorlagen mit einer kurzen Beschreibung, welche Sie direkt herunterladen und für Ihre Zwecke verwenden können."
     homepage-carousel-button-text: "Mehr erfahren"
     homepage-featured-category: "Empfohlen"
     homepage-all-category: "Alle"
@@ -100,13 +100,13 @@ language:
     cookie-alert-button: "OK"
     cookie-alert-link-text: "Mehr erfahren"
     cookie-alert-link: "https://peakboard.com/datenschutzerklaerung/"
-    cta-title: "Testen Sie den Peakboard-Designer"
+    cta-title: "TESTEN SIE DEN PEAKBOARD DESIGNER"
     cta-subtitle: "Erstellen Sie Ihre individuelle Visualisierung"
-    cta-content: "Mit dem Peakboard-Designer erstellen Sie in kürzester Zeit unterschiedlichste Dashboards, um alle für Sie relevanten Informationen auf einen Blick und in Echtzeit abzubilden. Ob Live Tiles, Voice Commands oder klassische Tabellen. Für Produktion, Logistik, IT oder Vertrieb."
+    cta-content: "Mit dem Peakboard Designer erstellen Sie in kürzester Zeit unterschiedlichste Visualisierung für die Produktion, Logistik, IT und viele andere Bereiche. Mit Peakboard bilden Sie alle für Sie relevanten Informationen, KPIs und Prozesse auf einen Blick und in Echtzeit ab."
     cta-link: "https://peakboard.com/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
     cta-link-text: "Peakboard-Designer kostenlos herunterladen"
   cn:
-    article-download-button-text: "Download"
+    article-download-button-text: "Download template"
     homepage-top-section-title: "获取帮助"
     homepage-top-section-content: "针对您的需求，帮助您快速、高效地充分利用Peakboard，详情请参考相关文章。"
     homepage-carousel-button-text: "Learn more"
