removed the dash

--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ language:
     cta-subtitle: "Erstellen Sie Ihre individuelle Visualisierung"
     cta-content: "Mit dem Peakboard Designer erstellen Sie in kürzester Zeit unterschiedlichste Visualisierung für die Produktion, Logistik, IT und viele andere Bereiche. Mit Peakboard bilden Sie alle für Sie relevanten Informationen, KPIs und Prozesse auf einen Blick und in Echtzeit ab."
     cta-link: "https://peakboard.com/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
-    cta-link-text: "Peakboard-Designer kostenlos herunterladen"
+    cta-link-text: "Peakboard Designer kostenlos herunterladen"
   cn:
     article-download-button-text: "Download template"
     homepage-top-section-title: "获取帮助"
