--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ language:
     cookie-alert-link: "https://peakboard.com/datenschutzerklaerung/"
     cta-title: "TESTEN SIE DEN PEAKBOARD DESIGNER"
     cta-subtitle: "Erstellen Sie Ihre individuelle Visualisierung"
-    cta-content: "Mit dem Peakboard Designer erstellen Sie in kürzester Zeit unterschiedlichste Visualisierung für die Produktion, Logistik, IT und viele andere Bereiche. Mit Peakboard bilden Sie alle für Sie relevanten Informationen, KPIs und Prozesse auf einen Blick und in Echtzeit ab."
+    cta-content: "Mit dem Peakboard Designer erstellen Sie in kürzester Zeit ganz unterschiedliche Visualisierungen für die Produktion, Logistik, IT und viele andere Bereiche. Mit Peakboard bilden Sie alle für Sie relevanten Informationen, KPIs und Prozesse auf einen Blick und in Echtzeit ab."
     cta-link: "https://peakboard.com/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
     cta-link-text: "Peakboard Designer kostenlos herunterladen"
   cn:
