Updated general texts

--- a/_config.yml
+++ b/_config.yml
@@ -62,10 +62,10 @@ language:
     cookie-alert-link-text: "Read more"
     cookie-alert-link: "https://peakboard.com/en/privacy-policy/"
     cta-title: "TRY THE PEAKBOARD DESIGNER"
-    cta-subtitle: "Create your individual visualization"
-    cta-content: "With the Peakboard Designer you can create different visualizations for production, logistics, IT and many other areas within a very short time. With Peakboard you can display all relevant information, KPIs and processes at a glance and in real time."
+    cta-subtitle: "Make your individual visualization"
+    cta-content: "Create different visualizations for production, logistics, IT and many other areas with the Peakboard Designer. Peakboard allows you to display all relevant information, KPI’s and processes at a glance and in real time."
     cta-link: "https://peakboard.com/en/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
-    cta-link-text: "Download Peakboard designer for free"
+    cta-link-text: "Download the Peakboard Designer for free"
   de:
     article-download-button-text: "Template herunterladen"
     homepage-top-section-title: "Peakboard Templates"
