Updated general texts

--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ language:
     cookie-alert-button: "OK"
     cookie-alert-link-text: "Read more"
     cookie-alert-link: "https://peakboard.com/en/privacy-policy/"
-    cta-title: "TRY THE PEAKBOARD DESIGNER"
+    cta-title: "EXPERIENCE THE PEAKBOARD DESIGNER"
     cta-subtitle: "Make your individual visualization"
     cta-content: "Create different visualizations for production, logistics, IT and many other areas with the Peakboard Designer. Peakboard allows you to display all relevant information, KPI’s and processes at a glance and in real time."
     cta-link: "https://peakboard.com/en/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
@@ -100,7 +100,7 @@ language:
     cookie-alert-button: "OK"
     cookie-alert-link-text: "Mehr erfahren"
     cookie-alert-link: "https://peakboard.com/datenschutzerklaerung/"
-    cta-title: "TESTEN SIE DEN PEAKBOARD DESIGNER"
+    cta-title: "ENTDECKEN SIE DEN PEAKBOARD DESIGNER"
     cta-subtitle: "Erstellen Sie Ihre individuelle Visualisierung"
     cta-content: "Mit dem Peakboard Designer erstellen Sie in kürzester Zeit ganz unterschiedliche Visualisierungen für die Produktion, Logistik, IT und viele andere Bereiche. Mit Peakboard bilden Sie alle für Sie relevanten Informationen, KPIs und Prozesse auf einen Blick und in Echtzeit ab."
     cta-link: "https://peakboard.com/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
