Added CN version of general information

--- a/_config.yml
+++ b/_config.yml
@@ -106,19 +106,19 @@ language:
     cta-link: "https://peakboard.com/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
     cta-link-text: "Peakboard Designer kostenlos herunterladen"
   cn:
-    article-download-button-text: "Download template"
+    article-download-button-text: "下载模板"
     homepage-top-section-title: "获取帮助"
     homepage-top-section-content: "针对您的需求，帮助您快速、高效地充分利用Peakboard，详情请参考相关文章。"
-    homepage-carousel-button-text: "Learn more"
+    homepage-carousel-button-text: "了解更多"
     homepage-featured-category: ""
-    homepage-all-category: "All"
-    homepage-menu-title-category: "Categories"
-    homepage-menu-title-data-sources: "Data Sources"
+    homepage-all-category: "全部"
+    homepage-menu-title-category: "类别"
+    homepage-menu-title-data-sources: "数据源"
     homepage-visible-categories: []
     homepage-visible-data-sources: []
-    top-menu-cta-button-text: "Get started!"
+    top-menu-cta-button-text: "马上开始"
     top-menu-cta-button-url: "https://peakboard.com/en/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
-    page-top-overview-text: "Template Overview"
+    page-top-overview-text: "模板概览"
     footer-support: "技术支持"
     footer-support-tel: "电话："
     footer-support-email: "邮箱："
@@ -127,21 +127,21 @@ language:
     footer-contact-website: "网站："
     footer-copyright: "版权所有，保留所有权利"
     footer-github: "Github"
-    footer-github-text: "View this page in Github"
+    footer-github-text: "前往Github查看此网页"
     footer-github-url: "https://github.com/Peakboard/peakboard-templates.github.io/tree/master/_templates/"
-    footer-legal: "Legal Information"
+    footer-legal: "法律信息"
     footer-legal-url: "https://peakboard.com/en/legal-notice/"
     search-title: "Peakboard搜索"
     search-results: "搜索结果"
     search-no-results: "未找到相关搜索结果： "
     search-bar-placeholder: "搜索"
-    cookie-alert-message: "This website uses cookies to ensure you get the best experience on our website."
-    cookie-alert-button: "OK"
-    cookie-alert-link-text: "Read more"
+    cookie-alert-message: "此网站使用cookies，以确保最佳浏览体验。"
+    cookie-alert-button: "允许"
+    cookie-alert-link-text: "了解更多"
     cookie-alert-link: "https://peakboard.com/en/privacy-policy/"
     cta-title: "立即试用Peakboard-Designer!"
     cta-subtitle: "下载Peakboard-Designer，在最短的时间内为每个部门定制仪表盘。"
-    cta-content: "使用Peakboard-Designer，无论是采用实时图块、语音命令还是经典图表，您都可以快速创建多种仪表潘，实时显示相关信息。方便快捷，一目了然。它可用于生产、仓储物流、IT或是分销部门。"
+    cta-content: "使用Peakboard-Designer，无论是采用实时图块、语音命令还是经典图表，您都可以快速创建多种仪表盘，实时显示相关信息。方便快捷，一目了然。它可用于生产、仓储物流、IT或是分销部门。"
     cta-link: "https://peakboard.com/zh-hans/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
     cta-link-text: "免费下载Peakboard Designer"
 algolia:
