--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ plugins:
   - jekyll-feed
   - jekyll-redirect-from
   - jekyll-multiple-languages-plugin
+  - jekyll-sitemap
 
 collections:
   templates:
