Updated german text

--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ language:
     article-overview-description-title: "Description"
     article-overview-benefits-title: "Benefits"
     article-overview-data-sources-title: "Data Sources"
-    article-related-templates-title: "Related Templates"
+    article-related-templates-title: "Ähnliche Templates"
     homepage-top-section-title: "Peakboard Templates"
     homepage-top-section-content: "Durch die Flexibilität von Peakboard gibt es zahlreiche Anwendungsmöglichkeiten in den unterschiedlichsten Bereichen. Hier finden Sie einige Vorlagen mit einer kurzen Beschreibung, welche Sie direkt herunterladen und für Ihre Zwecke verwenden können."
     homepage-carousel-button-text: "Mehr erfahren"
