Enable chinese version until we can get rid of language select on article pages. Because otherwise we end up with a 404 when clicking on 'overview'.

--- a/_config.yml
+++ b/_config.yml
@@ -4,12 +4,13 @@ description: "Templates for your Peakboard. Get more out of your Peakboard exper
 url: "https://templates.peakboard.com"
 twitter_username: pkbrd
 github_username:  Peakboard
-languages: ["en", "de"]
+languages: ["en", "de", "cn"]
 exclude_from_localizations: ["assets", "CNAME"]
 defaultLang: de
 languageNames:
   de: Deutsch
   en: English
+  cn: Chinese
 # Analytics
 gtm: "GTM-T2LNC7N"
 # Build settings
