--- a/_config.yml
+++ b/_config.yml
@@ -131,8 +131,8 @@ language:
     homepage-all-category: "全部"
     homepage-menu-title-category: "类别"
     homepage-menu-title-data-sources: "数据源"
-    homepage-visible-categories: []
-    homepage-visible-data-sources: []
+    homepage-visible-categories: ["Administration","Andon","KPI","Lean Management","Logistics","OEE","Production","Scripting","Reception","Interaction"]
+    homepage-visible-data-sources:
     top-menu-cta-button-text: "马上开始"
     top-menu-cta-button-url: "https://peakboard.com/zh-hans/peakboard-designer/?utm_source=templates_overview&utm_medium=get_started_button&utm_campaign=templates"
     page-top-overview-text: "模板概览"
