Added a new explanation text underneath the download button on article page

--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ collections:
 language:
   en:
     article-download-button-text: "Download template"
+    article-download-explanation: "Open this file with the Peakboard Designer"
     article-overview-title: "Overview"
     article-overview-description-title: "Description"
     article-overview-benefits-title: "Benefits"
@@ -75,6 +76,7 @@ language:
     cta-link-text: "Download the Peakboard Designer for free"
   de:
     article-download-button-text: "Template herunterladen"
+    article-download-explanation: "Sie können diese Datei mit dem Peakboard Designer öffnen"
     article-overview-title: "Overview"
     article-overview-description-title: "Description"
     article-overview-benefits-title: "Benefits"
@@ -119,6 +121,7 @@ language:
     cta-link-text: "Peakboard Designer kostenlos herunterladen"
   cn:
     article-download-button-text: "下载模板"
+    article-download-explanation: "Open this file with the Peakboard Designer"
     article-overview-title: "Overview"
     article-overview-description-title: "Description"
     article-overview-benefits-title: "Benefits"
